--- a/config/zen.conf
+++ b/config/zen.conf
@@ -24,202 +24,92 @@ maxconnections=16
 sendfreetransactions=1
 rpcclienttimeout=35
 onlynet=ipv6
-addnode=2001:19f0:9002:363:5400:ff:fe70:fe9d
-addnode=2607:fcc8:dfc0:16:60dd:e375:b796:882c
-addnode=2001:19f0:7402:9bb:5400:ff:fe82:b39c
-addnode=2001:19f0:6401:2c5:5400:1ff:fe4a:41c0
-addnode=2001:41d0:1:b674::1
-addnode=2001:19f0:5:1ca9:5400:1ff:fe3b:1f31
-addnode=2001:0:5ef5:79fd:288a:2071:41d9:16ad
-addnode=2a07:5741:0:6d7::1
-addnode=2a01:4f8:c0c:3ccc::2
-addnode=2a01:4f8:221:26dc::2
-addnode=2600:3c02::f03c:91ff:fe12:5f73
-addnode=2001:41d0:1000:115d::
-addnode=2001:19f0:6801:915:5400:1ff:fe3d:6fd6
-addnode=2001:19f0:5801:7f9:5400:1ff:fe38:5720
-addnode=2001:19f0:8001:642:5400:1ff:fe4a:1ddc
-addnode=2a01:4f8:a0:3233::2
-addnode=2a03:75c0:35:5b56::1
-addnode=2001:19f0:5:1232:5400:1ff:fe34:e77d
-addnode=2a02:c207:2013:9911::1
-addnode=2a07:5741:0:86b::1
-addnode=2001:bc8:4400:2300::e:f
-addnode=2a01:4f8:c0c:4bbc::2
-addnode=2a02:7b40:50d0:e2cb::1
-addnode=2605:da00:1234:1234:216:3cff:fe9a:78fc
-addnode=2a01:cb00:b6a:c600:8116:4471:8616:751e
-addnode=2a02:c205:2015:1148::1
-addnode=2a02:168:2000:c:2e0:4cff:fe68:297a
-addnode=2a01:4f8:150:6263::2
-addnode=2a01:4f8:200:6166::2
-addnode=2001:0:5ef5:79fb:183e:499:e775:e225
-addnode=2a02:2b88:2:1::5df3:1
-addnode=2a03:4000:8:347::2
-addnode=2001:41d0:8:6d8f::1
-addnode=2001:15e8:110:4ec3::1
-addnode=2a01:7a7:2:13ea:20c:29ff:fefe:d5fc
-addnode=2a02:c205:2015:1038::1
-addnode=2a07:5741:0:d6a::1
-addnode=2001:19f0:7001:2fcb:5400:1ff:fe4a:33cc
-addnode=2001:19f0:6801:cb1:5400:1ff:fe44:1f4c
-addnode=2001:19f0:6c01:929:5400:1ff:fe3e:c48c
-addnode=2a03:a960:5:132:8000::
-addnode=2a06:8ec0:3::1:82f6
-addnode=2a02:c207:2014:7353::1
-addnode=2a02:c207:3002:3853::1
-addnode=2001:44b8:31f0:e600::4661
-addnode=2001:41d0:1004:2535::
-addnode=2001:19f0:6401:5fa:5400:1ff:fe4a:20ea
-addnode=2001:19f0:9002:865:5400:1ff:fe42:49b3
-addnode=2a07:5741:0:205::1
-addnode=2400:6180:0:d0::fb:b001
-addnode=2001:19f0:9002:a99:5400:1ff:fe4a:40e9
-addnode=2001:19f0:7402:789:5400:1ff:fe47:7d28
-addnode=2a07:5741:0:cd9::1
-addnode=2a02:c207:2014:7381::1
-addnode=2a01:4f8:c0c:2f02::2
-addnode=2a02:c207:2015:1484::1
-addnode=2a01:7e00::f03c:91ff:fe03:eadc
-addnode=2a01:4f8:c0c:467a::2
-addnode=2a01:4f8:191:2233::2
-addnode=2a01:4f8:173:11ef::2
-addnode=2a02:c205:2013:8842::1
-addnode=2001:0:9d38:78cf:3015:35bc:4399:4826
-addnode=2a07:5741:0:19e::1
-addnode=2604:6600:0:c:216:3cff:fe53:1ae4
-addnode=2605:2700:0:3:a800:ff:fe00:d82c
-addnode=2400:8901::f03c:91ff:fe39:fb86
-addnode=2604:6600:8:12:216:3cff:fe53:1ae4
-addnode=2a04:92c7:2:38e::d6ab
-addnode=2a02:c207:2015:1283::1
-addnode=2a07:5741:0:918::1
-addnode=2001:19f0:5001:bbc:5400:1ff:fe45:5530
-addnode=2001:19f0:5:2986:5400:1ff:fe49:697d
-addnode=2001:19f0:7001:ee0:5400:1ff:fe4a:435
-addnode=2001:19f0:5:1c95:5400:1ff:fe3b:3831
-addnode=2001:0:9d38:953c:287f:178a:a697:e81f
-addnode=2a0b:7080:10::1:5230
-addnode=2a02:c205:2014:4397::1
-addnode=2a02:c207:2014:2294::1
-addnode=2001:19f0:5:b5:5400:1ff:fe49:cbc0
-addnode=2a02:7b40:5eb0:eae7::1
-addnode=2a02:c207:2014:7044::1
-addnode=2a00:6d40:60:77df::1
-addnode=2001:470:ef78:aa::4
-addnode=2604:180:1:c34::27ab
-addnode=2604:180:3:cfe::c586
-addnode=2a01:4f8:c0c:3f11::2
-addnode=2001:41d0:e:1371::1
-addnode=2001:41d0:2:5cae::
-addnode=2402:9e80:0:1000::1:c7ac
-addnode=2607:fea8:c460:7b7::6
-addnode=2a02:c207:2015:1578::1
-addnode=2a02:c207:2015:1775::1
-addnode=2a07:5741:0:766::1
-addnode=2a00:6d40:60:68b7::1
-addnode=2001:bc8:4400:2700::1751
-addnode=2001:bc8:4400:2500::6:c03
-addnode=2803:80:1004:836:8000::
-addnode=2a00:6d40:72:1fca::1
-addnode=2001:19f0:9002:619:5400:1ff:fe4a:392d
-addnode=2001:19f0:8001:ed9:5400:1ff:fe49:75a9
-addnode=2a02:c207:2015:2479::1
-addnode=2a01:4f8:c0c:4b6f::2
-addnode=2001:19f0:5801:cea:5400:1ff:fe41:2b4f
-addnode=2a02:7b40:d418:6876::1
-addnode=2001:0:4137:9e76:3c80:342:b6ec:a586
-addnode=2607:5300:60:3f8c::
-addnode=2001:980:2ce6:1:a00:27ff:fe4c:24e8
-addnode=2001:19f0:5:1fac:5400:1ff:fe3f:cf06
-addnode=2a03:75c0:28:7104::1
-addnode=2a02:c207:3002:3466::1
-addnode=2a00:1838:37:1d5::5ba7
-addnode=2a02:c207:2015:407::1
-addnode=2001:648:2ffc:1225:a800:3ff:feec:951
-addnode=2a00:6d40:60:6b14::1
-addnode=2400:8902::f03c:91ff:feb4:4bdd
-addnode=2a01:4f8:c0c:42a8::2
-addnode=2001:19f0:6401:552:5400:1ff:fe4a:41ba
-addnode=2400:8500:2500:624:163:44:112:51
-addnode=2607:fcd0:106:5c00::1865:a63f
-addnode=2a01:4f8:c0c:3e6f::2
-addnode=2a02:c205:3002:3279::1
-addnode=2001:19f0:ac01:f23:5400:1ff:fe46:32d2
-addnode=2a04:5200:ff10::84
-addnode=2001:41d0:1:7349::1
-addnode=2001:19f0:9002:bae:5400:1ff:fe48:98aa
-addnode=2600:3c01::f03c:91ff:fe12:79a
-addnode=2a02:c207:2015:526::1
-addnode=2001:0:9d38:6ab8:3c00:efcc:a64c:8025
-addnode=2001:41d0:302:2200::406
-addnode=2a00:6d40:72:4eeb::1
-addnode=2001:19f0:4400:4b79:5400:1ff:fe48:c49d
-addnode=2605:9880:0:76b:4e72:b9ff:fe98:cad9
-addnode=2a01:7e01::f03c:91ff:fe03:575
-addnode=2a01:4f8:c0c:2cf8::2
-addnode=2a02:c207:2015:1579::1
-addnode=2a01:4f8:c0c:1d5b::2
-addnode=2001:19f0:9002:c68:5400:1ff:fe4a:49f9
-addnode=2a04:92c7:e:6b2::c876
-addnode=2001:41d0:303:430f::
-addnode=2001:19f0:8001:19d:5400:1ff:fe45:9ed
-addnode=2001:19f0:5c01:bc6:5400:1ff:fe4a:628c
-addnode=2601:5c0:4200:6e20:bd7f:96ad:ce34:47d8
-addnode=2001:19f0:7001:2fc4:5400:ff:fe8a:7998
-addnode=2a02:c207:2014:7599::1
-addnode=2001:19f0:5001:f0e:5400:ff:fe89:78c2
+addnode=securenode1.zen-solutions.io
+addnode=znode0.prologas.net
+addnode=znode1.prologas.net
+addnode=znode2.prologas.net
+addnode=zen.gaynode.club
+addnode=sn1.sgpool.net
+addnode=sn2.sgpool.net
+addnode=sn3.sgpool.net
+addnode=sn4.sgpool.net
+addnode=sn5.sgpool.net
+addnode=sn6.sgpool.net
+addnode=sn7.sgpool.net
+addnode=sn8.sgpool.net
+addnode=sn9.sgpool.net
+addnode=sn10.sgpool.net
+addnode=sn11.sgpool.net
+addnode=sn12.sgpool.net
+addnode=secnode-01.nr1.co.in
+addnode=secnode-02.nr1.co.in
+addnode=secnode-03.nr1.co.in
+addnode=secnode-04.nr1.co.in
+addnode=secnode-05.nr1.co.in
+addnode=secnode-06.nr1.co.in
+addnode=secnode-07.nr1.co.in
+addnode=alpha.znode.online
+addnode=beta.znode.online
+addnode=znode.zillarelli.com
+addnode=znode2.zillarelli.com
+addnode=znode3.zillarelli.com
+addnode=znode4.zillarelli.com
+addnode=znode-04.watchyourcashflow.com
+addnode=znode-03.watchyourcashflow.com
+addnode=znode-02.watchyourcashflow.com
+addnode=znode-01.watchyourcashflow.com
+addnode=node1.gflex.com.au
+addnode=zen.freescape.cloud
+addnode=zen2.freescape.cloud
+addnode=zen3.freescape.cloud
+addnode=zen4.freescape.cloud
+addnode=zenith401.dynv6.net
+addnode=zenith402.dynv6.net
+addnode=zenith403.dynv6.net
+addnode=zenith404.dynv6.net
+addnode=zenith405.dynv6.net
+addnode=zenith406.dynv6.net
+addnode=zenith407.dynv6.net
+addnode=zenith408.dynv6.net
+addnode=zenith409.dynv6.net
+addnode=zenith410.dynv6.net
+addnode=zenith411.dynv6.net
+addnode=zenith412.dynv6.net
+addnode=zenith413.dynv6.net
+addnode=zenith414.dynv6.net
+addnode=zenith415.dynv6.net
+addnode=zenith416.dynv6.net
+addnode=zenith417.dynv6.net
+addnode=zenith418.dynv6.net
+addnode=zenith419.dynv6.net
+addnode=zenith420.dynv6.net
+addnode=zenith421.dynv6.net
+addnode=zenith422.dynv6.net
+addnode=zenith423.dynv6.net
+addnode=zenith424.dynv6.net
+addnode=zenith425.dynv6.net
+addnode=zenith426.dynv6.net
+addnode=zenith427.dynv6.net
+addnode=zenith428.dynv6.net
+addnode=zenith429.dynv6.net
+addnode=zenith430.dynv6.net
+addnode=zenith431.dynv6.net
+addnode=zenith432.dynv6.net
 addnode=2a02:2498:257b:7600:216:3eff:feec:cda4
-addnode=2a02:fe0:c910:4bd0:22cf:30ff:fe09:d0c5
-addnode=2001:19f0:6c01:81c:5400:ff:fe89:78ca
-addnode=2001:19f0:5:2e97:5400:1ff:fe4a:1fd9
-addnode=2a07:5741:0:98e::1
-addnode=2607:5300:201:3100::42d4
-addnode=2001:0:9d38:6abd:6b:525e:3c65:4eb1
+addnode=2604:180:2:100f::d354
+addnode=2001:19f0:7001:2fcb:5400:1ff:fe4a:33cc
+addnode=2a02:c207:3002:3466::1
+addnode=2a02:c207:3002:3853::1
+addnode=2001:44b8:31f0:e600::b277
+addnode=2a01:3b8:1968:f200:2::206
+addnode=2001:41d0:302:2200::406
+addnode=2001:19f0:9002:363:5400:ff:fe70:fe9d
+addnode=2a01:4f8:173:11ef::2
+addnode=2001:470:71:e89:20c:29ff:fe96:be97
+addnode=2a04:92c7:2:38e::d6ab
+addnode=2001:41d0:2:5cae::
+addnode=2a02:c207:2015:2075::1
 addnode=2001:19f0:7001:3d97:5400:1ff:fe4a:2282
-addnode=2a03:b0c0:2:d0::41:2001
-addnode=2a01:4f8:c0c:618::2
-addnode=2001:15e8:110:50e4::1
-addnode=2001:41d0:1:8215::1
-addnode=2a02:c207:2015:2324::1
-addnode=2a02:c207:2015:2387::1
-addnode=2a07:5741:0:318::1
-addnode=2a01:488:66:1000:53a9:2633:0:1
-addnode=2001:19f0:9002:e39:5400:1ff:fe3e:3244
-addnode=2001:470:3a23:1:215:5dff:fe0a:1105
-addnode=2a02:c207:2015:1778::1
-addnode=2001:41d0:2:830f::1
-addnode=2001:41d0:700:74::
-addnode=2001:19f0:8001:b42:5400:1ff:fe4a:5ffe
-addnode=2001:19f0:9002:d9b:5400:1ff:fe3d:40d5
-addnode=2a02:7b40:50d1:ec7d::1
-addnode=2a02:c207:2015:1486::1
-addnode=2001:19f0:5:16ef:5400:1ff:fe4a:3a45
-addnode=2001:19f0:300:1193:216:3eff:fe77:8d9b
-addnode=2001:19f0:5:a74:5400:ff:fe6d:4ade
-addnode=2001:19f0:9002:d4c:5400:1ff:fe3c:5ecc
-addnode=2001:19f0:9002:ee0:5400:1ff:fe36:ac54
-addnode=2001:19f0:6401:c65:5400:1ff:fe4a:62d4
-addnode=2a02:c207:2015:1219::1
-addnode=2607:5300:60:357::1
-addnode=2001:648:2ffc:1227:a800:ff:fee1:f682
-addnode=2a02:c205:2013:7285::1
-addnode=2a07:5741:0:aa::1
-addnode=2001:470:24:b12:20c:29ff:fe3d:7c37
-addnode=2600:3c03::f03c:91ff:fe25:403a
-addnode=2603:300b:d05:1b00:8c9d:151f:e9c0:cca5
-addnode=2a00:6d41:10:b53::1
-addnode=2600:3c00::f03c:91ff:fe03:ea08
-addnode=2a01:4f8:121:40b2::2
-addnode=2001:4ba0:cafe:e2e::1
-addnode=2a02:c207:2015:1577::1
-addnode=2a07:5741:0:ab9::1
-addnode=2001:0:9d38:90d7:384e:2b9:6eca:53d7
-addnode=2a02:c207:2013:6438::1
-addnode=2604:a880:800:10::126:2001
-addnode=2001:19f0:7001:ebf:5400:1ff:fe3e:dfa4
-addnode=2001:19f0:8001:ca3:5400:1ff:fe34:575a
+addnode=2001:19f0:7001:ee0:5400:1ff:fe4a:435
+addnode=2606:2e00:0:55:216:3eff:fe72:70b7
 addnode=2a07:5741:0:e77::1
-addnode=2a03:7380:2282:0:a236:9fff:fea1:b4a1
-addnode=2001:bc8:4700:2300::2a:e0f
-addnode=2607:5300:60:3f8d::
