add checkblocks checklevel

--- a/config/zen.conf
+++ b/config/zen.conf
@@ -1,26 +1,25 @@
 server=1
-rpcuser=SET_A_USER
-rpcpassword=SET_A_PASSWORD
+rpcuser=ADD_RPC_USERNAME
+rpcpassword=ADD_RPC_PASSWORD
 tlscertpath=/mnt/zen/config/ssl/cert.pem
 tlskeypath=/mnt/zen/config/ssl/key.pem
 datadir=/mnt/zen/data
-logtimestamps=1
 listenonion=0
 rpcbind=127.0.0.1
 rpcport=8231
 rpcallowip=127.0.0.1
 daemon=0
-shrinkdebugfile=0
 listen=1
-showmetrics=1
+printtoconsole=1
+logtimestamps=1
+shrinkdebugfile=0
+showmetrics=0
 metricsui=0
 metricsrefreshtime=60
-printtoconsole=1
-addnode=zpool.blockoperations.com
-addnode=zennodes.network
+checkblocks=24
+checklevel=1
 txindex=1
 tlsvalidate=1
 maxconnections=16
-sendfreetransactions=1
 rpcclienttimeout=35
 onlynet=ipv6
